<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingHorizontal="16dp"
    android:paddingTop="12dp"
    android:orientation="vertical"
    tools:context=".RecipeDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/ic_back_24"
            android:contentDescription="@string/back_button"
            />

        <TextView
            android:id="@+id/headerBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generated_recipe"
            android:includeFontPadding="false"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:textSize="32sp"
            android:clickable="true"
            />

    </LinearLayout>

    <ScrollView
        android:id="@+id/formattedLayout"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recipe_title"
                android:includeFontPadding="false"
                android:textColor="@color/dark_green"
                android:textStyle="bold"
                android:textSize="24sp"
                />

            <TextView
                android:id="@+id/summaryLabel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:text="Summary content text"
                android:includeFontPadding="false"
                android:textColor="@color/black"
                android:textSize="16sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/ingredients"
                android:includeFontPadding="false"
                android:textColor="@color/dark_green"
                android:textStyle="bold"
                android:textSize="24sp"
                />

            <TextView
                android:id="@+id/ingredientLabel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:text="Ingredients content text"
                android:includeFontPadding="false"
                android:textColor="@color/black"
                android:textSize="16sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/instructions"
                android:includeFontPadding="false"
                android:textColor="@color/dark_green"
                android:textStyle="bold"
                android:textSize="24sp"
                />

            <TextView
                android:id="@+id/instructionLabel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:text="Instructions content text"
                android:includeFontPadding="false"
                android:textColor="@color/black"
                android:textSize="16sp"
                />

        </LinearLayout>

    </ScrollView>

    <ScrollView
        android:id="@+id/unformattedLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:id="@+id/rawLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="Raw value response"/>

    </ScrollView>

</LinearLayout>